# nifti-segmentation

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  example_config.yaml  pyproject.toml
config_examples/: README.md  apple_silicon.yaml  complete_example.yaml  cpu_training.yaml  multi_gpu_production.yaml  quick_start.yaml
docs/: current_work.md  phase_plan.md  project_plan.md  todo.md
nifti_model/: __init__.py
nifti_model/cli/: __init__.py  main.py
nifti_model/data/: __init__.py  loaders.py  transforms.py
nifti_model/models/: __init__.py  inference.py  unetr.py
nifti_model/training/: __init__.py  logging.py  trainer.py
nifti_model/utils/: __init__.py  config.py  logging.py
niftilearn/: __init__.py
niftilearn/cli/: __init__.py  main.py
niftilearn/config/: __init__.py  loader.py  models.py
niftilearn/core/: __init__.py  logging.py  metadata.py
niftilearn/data/: __init__.py  datamodule.py  datasets.py  loaders.py  transforms.py
niftilearn/models/: __init__.py  unet.py
niftilearn/training/: __init__.py  losses.py  metrics.py
niftilearn/utils/: __init__.py  reconstruction.py
