[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nifti-model"
version = "0.1.0"
description = "NIFTI volume segmentation pipeline using UNetR architecture"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "monai>=1.3.0",
    "torch>=2.0.0",
    "lightning>=2.0.0",
    "click>=8.1.0",
    "loguru>=0.7.0",
    "nibabel>=5.0.0",
    "wandb>=0.16.0",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0.0",
    "scipy>=1.10.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
nifti-model = "nifti_model.cli.main:main"

[tool.ruff]
line-length = 80
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "RUF"]
ignore = ["E501"]  # Line too long

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.10",
]
